syntax = "proto3";

option go_package = "github.com/alvarotor/user-go/server/user-pb";

package user_pb;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service User {
  rpc Create (UserRequest) returns (UserIDResponse) {}
  rpc Get (UserIDRequest) returns (UserResponse) {}
  rpc Update (UserUpdateRequest) returns (UserStatusResponse) {}
  rpc Delete (UserDeleteRequest) returns (UserStatusResponse) {}
  rpc List (google.protobuf.Empty) returns (ListUsersResponse) {}
  rpc Login (UserLoginRequest) returns (UserLoginResponse) {}
  rpc LogOut (UserMailRequest) returns (UserStatusResponse) {}
  rpc Validate (UserValidateRequest) returns (UserTokenResponse) {}
  rpc GetByEmail (UserMailRequest) returns (UserResponse) {}
  rpc TokenToUser (UserTokenRequest) returns (UserResponse) {}
  rpc Health (UserIDRequest) returns (UserStatusResponse) {}
  rpc UpdateUserAdminStatus (UpdateUserAdminRequest) returns (UserStatusResponse) {}
  rpc Refresh (UserTokenRequest) returns (UserTokenResponse) {}
}

message UserRequest {
  string email = 1;
  string name = 2;
  string profile_pic = 3;
  bool validated = 4;
  bool admin = 5;
  bool super_admin = 6;
  string code = 7;
  google.protobuf.Timestamp code_expire = 8;
}

message UserLoginRequest {
  string email = 1;
  string browser = 2;
  string browser_version = 3;
  string operating_system = 4;
  string operating_system_version = 5;
  string cpu = 6;
  string language = 7;
  string timezone = 8;
  bool cookies_enabled = 9;
}

message UserMailRequest {
  string email = 1;
}

message UserTokenRequest {
  string token = 1;
  string browser = 2;
  string browser_version = 3;
  string operating_system = 4;
  string operating_system_version = 5;
  string cpu = 6;
  string language = 7;
  string timezone = 8;
  bool cookies_enabled = 9;
}

message UserIDRequest {
  uint32 id = 1;
}

message UserDeleteRequest {
  string email = 1;
  bool permanently = 2;
}

message UserUpdateRequest {
  string email = 1;
  string name = 2;
  string profile_pic = 3;
  string bucket = 4;
}

message UserIDResponse {
  uint32 id = 1;
  uint32 status = 2;
}

message UserStatusResponse {
  uint32 status = 1;
}

message ListUsersResponse {
  repeated UserResponse users = 1;
}

message UserResponse {
  string email = 1;
  string name = 2;
  string profile_pic = 3;
  bool validated = 4;
  bool admin = 5;
  bool super_admin = 6;
  string code = 7;
  google.protobuf.Timestamp code_expire = 8;
  string bucket = 9;
}

message UserValidateRequest {
  string code = 1;
}

message UserLoginResponse {
  string code = 1;
  uint32 status = 2;
}

message UserTokenResponse {
  string email = 1;
  string token = 2;
  uint32 status = 3;
  string token_refresh = 4;
  google.protobuf.Timestamp token_refresh_expires = 5;
  google.protobuf.Timestamp token_expires = 6;
}

message UpdateUserAdminRequest {
  string email = 1;
  bool admin = 2;
  string token = 3;
  string browser = 4;
  string browser_version = 5;
  string operating_system = 6;
  string operating_system_version = 7;
  string cpu = 8;
  string language = 9;
  string timezone = 10;
  bool cookies_enabled = 11;
}